libpltfm_driver_includedir = $(includedir)
nobase_libpltfm_driver_include_HEADERS = bf_bd_cfg/bf_bd_cfg_intf.h
nobase_libpltfm_driver_include_HEADERS += bf_bd_cfg/bf_bd_cfg_porting.h
nobase_libpltfm_driver_include_HEADERS += bf_bd_cfg/bf_bd_cfg_bd_map.h
nobase_libpltfm_driver_include_HEADERS += bf_pltfm_types/bf_pltfm_types.h
nobase_libpltfm_driver_include_HEADERS += bf_port_mgmt/bf_port_mgmt_intf.h
nobase_libpltfm_driver_include_HEADERS += bf_port_mgmt/bf_port_mgmt_porting.h
nobase_libpltfm_driver_include_HEADERS += bf_pltfm_mgr/pltfm_mgr_handlers.h
nobase_libpltfm_driver_include_HEADERS += bf_led/bf_led.h
nobase_libpltfm_driver_include_HEADERS += bf_qsfp/bf_qsfp.h
nobase_libpltfm_driver_include_HEADERS += bf_qsfp/bf_sfp.h
nobase_libpltfm_driver_include_HEADERS += bf_qsfp/sff.h
nobase_libpltfm_driver_include_HEADERS += bf_qsfp/sff_standards.h
nobase_libpltfm_driver_include_HEADERS += bf_qsfp/sff_db.h
nobase_libpltfm_driver_include_HEADERS += bf_qsfp/dom.h
nobase_libpltfm_driver_include_HEADERS += bf_qsfp/8436.h
nobase_libpltfm_driver_include_HEADERS += bf_qsfp/8472.h
nobase_libpltfm_driver_include_HEADERS += bf_qsfp/8636.h
nobase_libpltfm_driver_include_HEADERS += bf_qsfp/map.h
if IS_STATIC_LINKED_LIB
nobase_libpltfm_driver_include_HEADERS += bf_pltfm_mgr/pltfm_mgr_intf.h
endif
